# idol-mcp

./: CLAUDE.md  Cargo.toml  README.md
designs/: data-structure-refactor.md  tools-enhancement.md
src/: data.rs  main.rs  tools.rs  types.rs
