[package]
name = "idol-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.3.2", features = ["server"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0.4"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
fuzzy-matcher = "0.3"
